Fix button on iPhone SE 2020/22

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
 
 @media only screen and (max-width: 600px) {
     .monitor {
-        position: absolute;
+        position: relative;
         left: 0%;
         top: 35%;
         width: 350px;
@@ -99,7 +99,7 @@ body {
         border-radius: 30px;
         position: absolute;
         top: 15%;
-        left: 35%;
+        left: 33%;
         align-items: center;
         transition: .4s; 
         margin-bottom: 30px;
